syntax = "proto3";

package api.v1.lottery;

import "common/common.proto";
import "api/v1/lottery/ball.proto";
import "api/v1/lottery/game.proto";
import "google/protobuf/timestamp.proto";

option go_package = "g38_lottery_service/internal/generated/api/v1/lottery";

// GameEvent 代表一個遊戲事件
message GameEvent {
  // 事件 ID
  string event_id = 1;
  // 事件類型
  common.GameEventType type = 2;
  // 事件時間戳
  google.protobuf.Timestamp timestamp = 3;
  // 事件相關的房間 ID
  string room_id = 4;
  // 事件相關的遊戲 ID
  string game_id = 5;
  // 事件相關的遊戲階段
  common.GameStage stage = 6;

  // 事件數據（根據事件類型有不同的內容）
  oneof event_data {
    // 新球事件
    BallDrawnEvent ball_drawn = 10;
    // 遊戲階段變更事件
    StageChangedEvent stage_changed = 11;
    // 新遊戲開始事件
    NewGameEvent new_game = 12;
    // 遊戲取消事件
    GameCancelledEvent game_cancelled = 13;
    // 額外球選邊事件
    ExtraBallSideSelectedEvent extra_ball_side_selected = 14;
    // 心跳事件
    HeartbeatEvent heartbeat = 15;
  }
}

// BallDrawnEvent 球被抽取的事件
message BallDrawnEvent {
  // 抽取的球
  Ball ball = 1;
  // 目前已抽取的所有球
  repeated Ball all_balls = 2;
}

// StageChangedEvent 階段變更事件
message StageChangedEvent {
  // 先前階段
  common.GameStage old_stage = 1;
  // 新階段
  common.GameStage new_stage = 2;
  // 階段變更訊息
  string message = 3;
}

// NewGameEvent 新遊戲開始事件
message NewGameEvent {
  // 遊戲數據
  GameData game_data = 1;
}

// GameCancelledEvent 遊戲取消事件
message GameCancelledEvent {
  // 取消原因
  string reason = 1;
}

// ExtraBallSideSelectedEvent 額外球選邊事件
message ExtraBallSideSelectedEvent {
  // 選擇的邊
  common.ExtraBallSide side = 1;
}

// HeartbeatEvent 心跳事件
message HeartbeatEvent {
  // 心跳計數
  int32 count = 1;
}

// SubscribeGameEventsRequest 訂閱遊戲事件請求
message SubscribeGameEventsRequest {
  // 房間 ID
  string room_id = 1;
}

// 訂閱者類型
enum SubscriberType {
  // 未指定
  SUBSCRIBER_TYPE_UNSPECIFIED = 0;
  // 前端
  SUBSCRIBER_TYPE_FRONTEND = 1;
  // 後端服務
  SUBSCRIBER_TYPE_BACKEND_SERVICE = 2;
  // 監控工具
  SUBSCRIBER_TYPE_MONITORING = 3;
} 